Fixup readability of the blog date

--- a/_sass/base/_utility.scss
+++ b/_sass/base/_utility.scss
@@ -27,7 +27,7 @@
 }
 
 .header-txt-shadow {
-    text-shadow: 1px 1px 2px $text-shadow;
+    text-shadow: 2px 2px 3px $text-shadow;
 }
 
 // Buttons
