--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -37,7 +37,7 @@ $paypal-link-color: $paypal-color;
 
 //Search color
 $link-shadow: transparentize($link-color, .6); //rgba(26, 188, 156, 0.6);
-$text-shadow: #3f3f3f;
+$text-shadow: #2f2f2f;
 $search-color: #999;
 
 // Header colours
