--- a/_sass/layouts/_page.scss
+++ b/_sass/layouts/_page.scss
@@ -5,7 +5,7 @@ h1.title {
 .subtitle {
     font-weight: normal;
     margin-top: 5px;
-    text-shadow: 1px 1px 2px $text-shadow;
+    @extend .header-txt-shadow;
 }
 
 //Shared css in _post.scss
